--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -16,6 +16,29 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS       OFF)
 
+
+
+
+# Fetching the SFML library to build our framework
+# to do that we need to include function called FetchContent
+include(FetchContent)
+
+# now we will set variable for SFML
+set(SFML_LIB_NAME SFML)
+
+FetchContent_Declare(
+	#variable name
+	${SFML_LIB_NAME}
+	# location
+	GIT_REPOSITORY https://github.com/SFML/SFML
+	# to fetch specific version
+	GIT_TAG 2.5.1
+	# to avoid the shallow copy and ask actually download referenced library if in anycase SFML is using any other libraries 
+	GIT_SHALLOW FALSE
+)
+
+FetchContent_MakeAvailable(${SFML_LIB_NAME})
+
 # setting the variables for valu LightYearsGame
 set(LIGHT_YEARS_GAME_TARGET_NAME LightYearsGame)
 
