--- a/LightYearsNxt/CmakeLists.txt
+++ b/LightYearsNxt/CmakeLists.txt
@@ -3,3 +3,29 @@
 add_executable(${LIGHT_YEARS_GAME_TARGET_NAME}
 	${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
 )
+
+# linking the library so we can include this in our code
+target_link_libraries(${LIGHT_YEARS_GAME_TARGET_NAME} PUBLIC sfml-graphics)
+target_link_libraries(${LIGHT_YEARS_GAME_TARGET_NAME} PUBLIC sfml-window)
+target_link_libraries(${LIGHT_YEARS_GAME_TARGET_NAME} PUBLIC sfml-system)
+target_link_libraries(${LIGHT_YEARS_GAME_TARGET_NAME} PUBLIC sfml-audio)
+
+# to do the repetative task in ease while creating a macro to add the dll in postBuild
+function(CopyLibToTarget LIB_NAME TARGET_NAME)
+add_custom_command(TARGET
+${TARGET_NAME}
+POST_BUILD
+COMMAND
+${CMAKE_COMMAND} -E copy_if_different
+ #FROM
+$<TARGET_FILE:${LIB_NAME}>
+ #TO
+$<TARGET_FILE_DIR:${TARGET_NAME}>
+)	
+endfunction()
+
+CopyLibToTarget(sfml-system ${LIGHT_YEARS_GAME_TARGET_NAME})
+CopyLibToTarget(sfml-graphics ${LIGHT_YEARS_GAME_TARGET_NAME})
+CopyLibToTarget(sfml-window ${LIGHT_YEARS_GAME_TARGET_NAME})
+CopyLibToTarget(sfml-audio ${LIGHT_YEARS_GAME_TARGET_NAME})
+
