--- a/LightYearsNxtEngine/CmakeLists.txt
+++ b/LightYearsNxtEngine/CmakeLists.txt
@@ -4,13 +4,16 @@ add_library(${LIGHT_YEARS_ENGINE_TARGET_NAME} STATIC
  ${CMAKE_CURRENT_SOURCE_DIR}/include/framework/Application.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/framework/Application.cpp
 
-  ${CMAKE_CURRENT_SOURCE_DIR}/include/framework/core.h
+ ${CMAKE_CURRENT_SOURCE_DIR}/include/framework/core.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/framework/core.cpp
 
-  ${CMAKE_CURRENT_SOURCE_DIR}/include/framework/World.h
+ ${CMAKE_CURRENT_SOURCE_DIR}/include/framework/World.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/framework/World.cpp
 
-  ${CMAKE_CURRENT_SOURCE_DIR}/include/EntryPoint.h
+ ${CMAKE_CURRENT_SOURCE_DIR}/include/framework/Actor.h
+ ${CMAKE_CURRENT_SOURCE_DIR}/src/framework/Actor.cpp
+
+ ${CMAKE_CURRENT_SOURCE_DIR}/include/EntryPoint.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/EntryPoint.cpp
 )
 
