--- a/LightYearsNxtEngine/CmakeLists.txt
+++ b/LightYearsNxtEngine/CmakeLists.txt
@@ -1,5 +1,4 @@
 # to redeem the value of the variable we use ${LIGHT_YEARS_ENGINE_TARGET_NAME}
-
 add_library(${LIGHT_YEARS_ENGINE_TARGET_NAME} STATIC
  ${CMAKE_CURRENT_SOURCE_DIR}/include/framework/Application.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/framework/Application.cpp
@@ -15,6 +14,12 @@ add_library(${LIGHT_YEARS_ENGINE_TARGET_NAME} STATIC
 
  ${CMAKE_CURRENT_SOURCE_DIR}/include/framework/Object.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/framework/Object.cpp
+
+ ${CMAKE_CURRENT_SOURCE_DIR}/include/framework/AssestManager.h
+ ${CMAKE_CURRENT_SOURCE_DIR}/src/framework/AssestManager.cpp
+
+  ${CMAKE_CURRENT_SOURCE_DIR}/include/framework/MathUtility.h
+ ${CMAKE_CURRENT_SOURCE_DIR}/src/framework/MathUtility.cpp
 
  ${CMAKE_CURRENT_SOURCE_DIR}/include/EntryPoint.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/EntryPoint.cpp
