--- a/LightYearsNxtGame/CmakeLists.txt
+++ b/LightYearsNxtGame/CmakeLists.txt
@@ -6,6 +6,15 @@ add_executable(${LIGHT_YEARS_GAME_TARGET_NAME}
  ${CMAKE_CURRENT_SOURCE_DIR}/include/spaceship/spaceship.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/spaceship/spaceship.cpp
 
+  ${CMAKE_CURRENT_SOURCE_DIR}/include/weapon/shooter.h
+ ${CMAKE_CURRENT_SOURCE_DIR}/src/weapon/shooter.cpp
+
+ ${CMAKE_CURRENT_SOURCE_DIR}/include/weapon/bulletshooter.h
+ ${CMAKE_CURRENT_SOURCE_DIR}/src/weapon/bulletshooter.cpp
+
+ ${CMAKE_CURRENT_SOURCE_DIR}/include/weapon/bullet.h
+ ${CMAKE_CURRENT_SOURCE_DIR}/src/weapon/bullet.cpp
+
  ${CMAKE_CURRENT_SOURCE_DIR}/include/player/PlayerSpaceship.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/player/PlayerSpaceship.cpp
 )
