--- a/LightYearsNxtEngine/CmakeLists.txt
+++ b/LightYearsNxtEngine/CmakeLists.txt
@@ -23,6 +23,9 @@ add_library(${LIGHT_YEARS_ENGINE_TARGET_NAME} STATIC
 
  ${CMAKE_CURRENT_SOURCE_DIR}/include/EntryPoint.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/EntryPoint.cpp
+
+ ${CMAKE_CURRENT_SOURCE_DIR}/include/framework/PhysicsSystem.h
+ ${CMAKE_CURRENT_SOURCE_DIR}/src/framework/PhysicsSystem.cpp
 )
 
 # to find the target library
@@ -30,12 +33,41 @@ target_include_directories(${LIGHT_YEARS_ENGINE_TARGET_NAME} PUBLIC
 	${CMAKE_CURRENT_SOURCE_DIR}/include
 )
 
+# now we will set variable for SFML
+set(SFML_LIB_NAME SFML)
+
+FetchContent_Declare(
+	#variable name
+	${SFML_LIB_NAME}
+	# location
+	GIT_REPOSITORY https://github.com/SFML/SFML
+	# to fetch specific version
+	GIT_TAG 2.5.1
+	# to avoid the shallow copy and ask actually download referenced library if in anycase SFML is using any other libraries 
+	GIT_SHALLOW FALSE
+)
+# to make the lib is available to the game engine
+FetchContent_MakeAvailable(${SFML_LIB_NAME})
+
 # linking the library so we can include this in our code
 target_link_libraries(${LIGHT_YEARS_ENGINE_TARGET_NAME} PUBLIC sfml-graphics
  sfml-window
  sfml-system
  sfml-audio
  )
+
+# fetching the BOX2D LIB FROM GITHUB
+set(BOX2D_LIB_NAME Box2D)
+
+FetchContent_Declare(
+	${BOX2D_LIB_NAME}
+	GIT_REPOSITORY https://github.com/erincatto/box2d.git
+	GIT_TAG v2.4.1
+	GIT_SHALLOW FALSE
+)
+
+FetchContent_MakeAvailable(${BOX2D_LIB_NAME})
+target_link_libraries(${LIGHT_YEARS_ENGINE_TARGET_NAME} PUBLIC box2d)
 
 # to do the repetative task in ease while creating a macro to add the dll in postBuild
 function(CopyLibToTarget LIB_NAME TARGET_NAME)
@@ -55,4 +87,5 @@ CopyLibToTarget(sfml-system ${LIGHT_YEARS_ENGINE_TARGET_NAME})
 CopyLibToTarget(sfml-graphics ${LIGHT_YEARS_ENGINE_TARGET_NAME})
 CopyLibToTarget(sfml-window ${LIGHT_YEARS_ENGINE_TARGET_NAME})
 CopyLibToTarget(sfml-audio ${LIGHT_YEARS_ENGINE_TARGET_NAME})
+CopyLibToTarget(box2d ${LIGHT_YEARS_ENGINE_TARGET_NAME})
 
