We refactor the game with level and all the enemy class

--- a/LightYearsNxtGame/CmakeLists.txt
+++ b/LightYearsNxtGame/CmakeLists.txt
@@ -15,9 +15,27 @@ add_executable(${LIGHT_YEARS_GAME_TARGET_NAME}
  ${CMAKE_CURRENT_SOURCE_DIR}/include/weapon/bullet.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/weapon/bullet.cpp
 
+  ${CMAKE_CURRENT_SOURCE_DIR}/include/VFX/Explosion.h
+ ${CMAKE_CURRENT_SOURCE_DIR}/src/VFX/Explosion.cpp
+
+ ${CMAKE_CURRENT_SOURCE_DIR}/include/Enemy/EnemySpaceship.h
+ ${CMAKE_CURRENT_SOURCE_DIR}/src/Enemy/EnemySpaceship.cpp
+
+ ${CMAKE_CURRENT_SOURCE_DIR}/include/Enemy/Vanguard.h
+ ${CMAKE_CURRENT_SOURCE_DIR}/src/Enemy/Vanguard.cpp
+
  ${CMAKE_CURRENT_SOURCE_DIR}/include/player/PlayerSpaceship.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/player/PlayerSpaceship.cpp
-)
+ 
+ #for game level
+ ${CMAKE_CURRENT_SOURCE_DIR}/include/Level/GameLevelOne.h
+ ${CMAKE_CURRENT_SOURCE_DIR}/src/Level/GameLevelOne.cpp
+
+
+ # for health condition
+ ${CMAKE_CURRENT_SOURCE_DIR}/include/gameplay/HealthComponent.h
+ ${CMAKE_CURRENT_SOURCE_DIR}/src/gameplay/HealthComponent.cpp
+ )
 
 # to find the target library
 target_include_directories(${LIGHT_YEARS_GAME_TARGET_NAME} PUBLIC
