--- a/LightYearsNxtEngine/CmakeLists.txt
+++ b/LightYearsNxtEngine/CmakeLists.txt
@@ -24,6 +24,9 @@ add_library(${LIGHT_YEARS_ENGINE_TARGET_NAME} STATIC
  ${CMAKE_CURRENT_SOURCE_DIR}/include/framework/Delegate.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/framework/Delegate.cpp
 
+  ${CMAKE_CURRENT_SOURCE_DIR}/include/framework/TimerManager.h
+ ${CMAKE_CURRENT_SOURCE_DIR}/src/framework/TimerManager.cpp
+
  ${CMAKE_CURRENT_SOURCE_DIR}/include/EntryPoint.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/EntryPoint.cpp
 
