made timer handler to spawn the enemy in specified time

--- a/LightYearsNxtGame/CmakeLists.txt
+++ b/LightYearsNxtGame/CmakeLists.txt
@@ -27,6 +27,10 @@ add_executable(${LIGHT_YEARS_GAME_TARGET_NAME}
  ${CMAKE_CURRENT_SOURCE_DIR}/include/player/PlayerSpaceship.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/player/PlayerSpaceship.cpp
  
+ # for Vanguard gamestage
+ ${CMAKE_CURRENT_SOURCE_DIR}/include/Enemy/VanguardStage.h
+ ${CMAKE_CURRENT_SOURCE_DIR}/src/Enemy/VanguardStage.cpp
+
  #for game level
  ${CMAKE_CURRENT_SOURCE_DIR}/include/Level/GameLevelOne.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Level/GameLevelOne.cpp
