--- a/LightYearsNxtEngine/CmakeLists.txt
+++ b/LightYearsNxtEngine/CmakeLists.txt
@@ -35,6 +35,10 @@ add_library(${LIGHT_YEARS_ENGINE_TARGET_NAME} STATIC
 
  ${CMAKE_CURRENT_SOURCE_DIR}/include/VFX/Particle.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/VFX/Particle.cpp
+
+ ${CMAKE_CURRENT_SOURCE_DIR}/include/gameplay/GameStage.h
+ ${CMAKE_CURRENT_SOURCE_DIR}/src/gameplay/GameStage.cpp
+
 )
 
 # to find the target library
