--- a/LightYearsNxtGame/CmakeLists.txt
+++ b/LightYearsNxtGame/CmakeLists.txt
@@ -31,6 +31,14 @@ add_executable(${LIGHT_YEARS_GAME_TARGET_NAME}
  ${CMAKE_CURRENT_SOURCE_DIR}/include/Enemy/VanguardStage.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Enemy/VanguardStage.cpp
 
+ # for TwinBlade 
+  ${CMAKE_CURRENT_SOURCE_DIR}/include/Enemy/TwinBlade.h
+ ${CMAKE_CURRENT_SOURCE_DIR}/src/Enemy/TwinBlade.cpp
+
+  # for TwinBlade Stage
+  ${CMAKE_CURRENT_SOURCE_DIR}/include/Enemy/TwinBladeStage.h
+ ${CMAKE_CURRENT_SOURCE_DIR}/src/Enemy/TwinBladeStage.cpp
+
  #for game level
  ${CMAKE_CURRENT_SOURCE_DIR}/include/Level/GameLevelOne.h
  ${CMAKE_CURRENT_SOURCE_DIR}/src/Level/GameLevelOne.cpp
